# school-cats

./: .env  .gitignore  Cargo.toml  README.md
.git-bad/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index
.git-bad/logs/: HEAD
.git-bad/logs/refs/heads/: code  master
.git-bad/logs/refs/remotes/origin/: master
.git-bad/refs/heads/: code
.git-bad/refs/remotes/origin/: master
cats-api/: Cargo.toml
cats-api/.cargo/: config.toml
cats-api/src/: cats.rs  jwt.rs  lib.rs  places.rs  posts.rs  user.rs  utils.rs
cats-frontend/: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
cats-frontend/src/: api.rs  app.rs  cat.rs  cat_feeding.rs  cat_info.rs  cat_post.rs  index.rs  login.rs  main.rs  routes.rs  storage.rs  user.rs  utils.rs
cats_api/: Cargo.toml
cats_frontend/: Cargo.toml
database/: .gitignore  crebas.sql
docs/: .gitignore  SchoolCatesModel-bkp.cdb  SchoolCatesModel-bkp.cdm  SchoolCatesModel.cdb  SchoolCatesModel.cdm  SchoolCatesModel.ldb  SchoolCatesModel.ldm  SchoolCatesModel.pdm  api.md  database.md  frontend.md  requirements.md  学号_姓名_数据库实验四报告（模板）.docx  工作空间.sws
src/: db.rs  main.rs  upload.rs  utils.rs
