[package]
name = "school-cats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cats-api = { path = "cats-api" }
tokio = { version = "1.23.0", features = ["macros"] }
warp = "0.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql", "sqlite"] }
anyhow = "1.0.68"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"

[workspace]
members = [
    "cats-api",
    "cats-frontend"
]
