[package]
name = "school-cats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cats-api = { path = "cats-api" }
tokio = { version = "1.23.0", features = ["macros", "fs"] }
warp = "0.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
mysql = "23.0.1"
encoding = "0.2.33"
chrono = "0.4.23"
mysql_common = { version = "0.29.2", features = ["chrono"]}
uuid = { version = "1.2.2", features = ["v4"]}
futures = { version = "0.3", default-features = false }
bytes = "1.3.0"

[workspace]
members = [
    "cats-api",
    "cats-frontend"
]
