[package]
name = "school-cats-frontend"
version = "0.1.0"
edition = "2021"
description = "Frontend of school-cats project"
readme = "README.md"
repository = "https://github.com/chiro2001/school-cats/cats-frontend"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
web-sys = { version = "0.3.60", features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'FileReader',
    'FileReaderSync'
] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
cats-api = { path = "../cats-api" }
gloo-net = "0.2.5"
wasm-bindgen-futures = "0.4.33"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"
serde_json = "1.0.91"
gloo = "0.8.0"
chrono = "0.4.23"
js-sys = "0.3.60"
gloo-file = "0.2.3"
